overflow X not hiding. problem solved

--- a/scss/overlay/_header.scss
+++ b/scss/overlay/_header.scss
@@ -2,6 +2,7 @@
 @use "../util" as u;
 
 .header {
+  position: relative;
 
   &__image {
     background-image: url(../../images/mobile/image-hero.jpg);
